--- a/Forest_mask_test.ipynb
+++ b/Forest_mask_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dff8beb9",
+   "id": "bd6545cd",
    "metadata": {},
    "source": [
     "# Выделение маски леса на снимке Sentinel-1 SAR: Тестирование моделей"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bfcad04",
+   "id": "78502c46",
    "metadata": {},
    "source": [
     "Блокнот разбит на 4 части: оценка сверточной сети с тремя сверточными слоями, обучение ResNet-7, обучение U-Net и обучение Random Forest. \n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01c43c25",
+   "id": "96f987ea",
    "metadata": {},
    "source": [
     "## Подготовка данных"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "111468e1",
+   "id": "a5703811",
    "metadata": {},
    "source": [
     "Загрузка библиотек"
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3314d274",
+   "id": "4ef363b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1177479",
+   "id": "b4e6b099",
    "metadata": {},
    "source": [
     "Функции"
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce467ccb",
+   "id": "848531e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dc5d15c",
+   "id": "9b836686",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "180046a4",
+   "id": "7f624353",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7abf81cf",
+   "id": "a7217473",
    "metadata": {},
    "source": [
     "### Загрузка и предобработка"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b483cf5",
+   "id": "148f74be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1c51eb3",
+   "id": "1404c040",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02dc23b3",
+   "id": "eb1514de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2776c09",
+   "id": "62775113",
    "metadata": {},
    "source": [
     "Чтобы не забывать границу, после которой можно оценивать метрики"
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "582ad140",
+   "id": "1de1a5db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,49 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c43a12fb",
+   "id": "05e0b743",
+   "metadata": {},
+   "source": [
+    "Готовые модели также можно скачать, однако необходимо будет изменить пути на загружаемые модели, потому что они имеют отличные названия"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3aaef94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gdown --id 1toFZ-cKZowAvnZHNWqhzPWF8dgSUORnA # cnn\n",
+    "!gdown --id 1tFHnTMZH7z_2K8y9Huv1q4bpuK1xKzZr # resnet\n",
+    "!gdown --id 1EF0AO0sWjBHeep6NPjqby8IG7bfrygdl # unet\n",
+    "# готовая модель random forest весит 3 ГБ и у меня нет возможности ее загрузить на диск :("
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8244a9f",
+   "metadata": {},
+   "source": [
+    "Готовые маски также можно скачать и использовать для оценки качества"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ea8cdaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gdown --id 1GT4_eYq-130UXZXJA30J5D6nTgITqI81 # cnn\n",
+    "!gdown --id 12kWhnVvfQ5TbbSkCuMLkymQKY2SpaZKk # resnet\n",
+    "!gdown --id 1n1im0gdadqvHKlQb36bYjQ8-FC2IMpwl # unet\n",
+    "!gdown --id 1pPidsiMsX19hM3frVq9qIFpwqWq8cMnQ # rf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a48ca233",
    "metadata": {},
    "source": [
     "## Сверточные сети для классификации"
@@ -239,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5203710b",
+   "id": "938b4f18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e6ee6ab",
+   "id": "40cf0d5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de6909c3",
+   "id": "5678817c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5b07584",
+   "id": "b494abbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "641ef9f6",
+   "id": "dd16de2b",
    "metadata": {},
    "source": [
     "Так как мы только оцениваем модели, нам не нужны аугментации"
@@ -378,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f404c8a0",
+   "id": "7951438e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f141d23",
+   "id": "97d71a50",
    "metadata": {},
    "source": [
     "### Simple CNN"
@@ -397,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fe8eb25",
+   "id": "b9a0659a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c08ae76",
+   "id": "f4e710bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e256042",
+   "id": "4068dd8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a11abf0",
+   "id": "28cf6a37",
    "metadata": {},
    "source": [
     "__Метрики__"
@@ -464,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4c5cf93",
+   "id": "ceb0169b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b3570fd",
+   "id": "ecfda8ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "248df6dc",
+   "id": "b148c674",
    "metadata": {},
    "source": [
     "__Оригинальная и смоделированная маски__"
@@ -496,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "749203e7",
+   "id": "6aed463d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "137d1738",
+   "id": "26555dbb",
    "metadata": {},
    "source": [
     "Фрагмент"
@@ -520,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4f8b0a3",
+   "id": "bdaca423",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "855d239c",
+   "id": "a94f518f",
    "metadata": {},
    "source": [
     "__Разница между оригинальной маской и смоделированной__"
@@ -552,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0014494f",
+   "id": "ec47dd26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "633b8e11",
+   "id": "7105bbff",
    "metadata": {},
    "source": [
     "Белый - нет разницы\n",
@@ -578,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bef8975",
+   "id": "55737bf5",
    "metadata": {},
    "source": [
     "__Экспорт результата__"
@@ -587,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec63a2cc",
+   "id": "7f36416b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7118c238",
+   "id": "c4d7b1a8",
    "metadata": {},
    "source": [
     "### ResNet"
@@ -608,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49f79aeb",
+   "id": "64d48913",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "008c743b",
+   "id": "951ec427",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aeb9726",
+   "id": "a10fff5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "837905dd",
+   "id": "142bdb15",
    "metadata": {},
    "source": [
     "__Метрики__"
@@ -717,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd029e47",
+   "id": "afe625a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "993af1e2",
+   "id": "e5f7ba43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8aa17a8e",
+   "id": "3b878b29",
    "metadata": {},
    "source": [
     "__Оригинальная и смоделированная маски__"
@@ -749,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d6fcc48",
+   "id": "b7c76d31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +806,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dc08072",
+   "id": "d40129e2",
    "metadata": {},
    "source": [
     "Фрагмент"
@@ -773,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7596a8b0",
+   "id": "18c38e0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +838,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89f70bd4",
+   "id": "5af1e85f",
    "metadata": {},
    "source": [
     "__Разница между оригинальной маской и смоделированной__"
@@ -805,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06bb7a06",
+   "id": "a12a2125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "005c607c",
+   "id": "6fb09d4b",
    "metadata": {},
    "source": [
     "Белый - нет разницы\n",
@@ -831,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd02ec8d",
+   "id": "8d8d7192",
    "metadata": {},
    "source": [
     "__Экспорт результата__"
@@ -840,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d7781a1",
+   "id": "17886262",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ca2cd50",
+   "id": "c53dd066",
    "metadata": {},
    "source": [
     "## Сверточная сеть U-Net для сегментации"
@@ -861,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "553c9678",
+   "id": "258011ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ff14c8b",
+   "id": "0b89978e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbe354fc",
+   "id": "1d4d311a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "901fe4d6",
+   "id": "eaad7a73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b610ea2a",
+   "id": "779b98e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de12f96e",
+   "id": "d3378222",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1dbcc7a",
+   "id": "efcbf720",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a057e64",
+   "id": "2aae3815",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76062884",
+   "id": "d6861ff1",
    "metadata": {},
    "source": [
     "__Метрики__"
@@ -1062,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "384ea5b8",
+   "id": "2f5b3dea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5aabcec1",
+   "id": "2a47c373",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86ca1854",
+   "id": "f38f5795",
    "metadata": {},
    "source": [
     "__Оригинальная и смоделированная маски__"
@@ -1094,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b53ae3f",
+   "id": "1bf8139e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07d56b6e",
+   "id": "b77a1590",
    "metadata": {},
    "source": [
     "Фрагмент"
@@ -1118,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac42b33d",
+   "id": "d37a85ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ac49c32",
+   "id": "c876f374",
    "metadata": {},
    "source": [
     "__Разница между оригинальной маской и смоделированной__"
@@ -1150,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8db39477",
+   "id": "addf63e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1164,7 +1206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfa45224",
+   "id": "523f8e06",
    "metadata": {},
    "source": [
     "Белый - нет разницы\n",
@@ -1176,7 +1218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1349b4bc",
+   "id": "be42b3c8",
    "metadata": {},
    "source": [
     "__Экспорт результата__"
@@ -1185,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b3d5974",
+   "id": "b07e9ca4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de924d00",
+   "id": "fdced1ce",
    "metadata": {},
    "source": [
     "## Random Forest"
@@ -1206,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c6ec630",
+   "id": "1bd559ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1216,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5012583e",
+   "id": "30619b8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c4302fa",
+   "id": "f4f96e93",
    "metadata": {},
    "source": [
     "__Метрики__"
@@ -1239,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c9e4e90",
+   "id": "feed31e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1251,7 +1293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef2b3967",
+   "id": "4cb723cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1262,7 +1304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d3b9dba",
+   "id": "b8400f56",
    "metadata": {},
    "source": [
     "__Оригинальная и смоделированная маски__"
@@ -1271,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afdcc7a2",
+   "id": "809e20d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ceef1ee",
+   "id": "40f27c43",
    "metadata": {},
    "source": [
     "Фрагмент"
@@ -1295,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db2cc145",
+   "id": "ec0fd627",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,7 +1360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e578691",
+   "id": "9aa39a77",
    "metadata": {},
    "source": [
     "__Разница между оригинальной маской и смоделированной__"
@@ -1327,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6b4848c",
+   "id": "19de7b83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,7 +1383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82c9ba48",
+   "id": "014b78a2",
    "metadata": {},
    "source": [
     "Белый - нет разницы\n",
@@ -1353,7 +1395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b90f5a39",
+   "id": "609161d6",
    "metadata": {},
    "source": [
     "__Экспорт результата__"
@@ -1362,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b6a3ca6",
+   "id": "29428568",
    "metadata": {},
    "outputs": [],
    "source": [
