--- a/Forest_mask_test.ipynb
+++ b/Forest_mask_test.ipynb
@@ -203,6 +203,11 @@
     "band_1 = image_array[0]\n",
     "band_2 = image_array[1]\n",
     "\n",
+    "# standard scaler для CNN\n",
+    "band_1 = (band_1 - np.mean(band_1)) / np.std(band_1)\n",
+    "band_2 = (band_2 - np.mean(band_2)) / np.std(band_2)\n",
+    "\n",
+    "# standard scaler для ResNet, U-Net и Random Forest\n",
     "band_1 = StandardScaler().fit_transform(band_1)\n",
     "band_2 = StandardScaler().fit_transform(band_2)\n",
     "\n",
